--- a/css/style.css
+++ b/css/style.css
@@ -53,26 +53,112 @@ padding: 2px;
     margin-left: 20px;
 }
 /* showcase*/
+hr{
+   margin: 14px; 
+}
 .showcase{
     width: 100%;
     height:550px;
     background: url('../img/showcase2.jpg') no-repeat center/cover;
     padding-bottom: 50px;
+    margin-bottom:20px ;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+}
+.showcase  h2{
+    padding: 5px;
+    background:#262626;
+}
+.showcase  p{
+    background-color: #262626;
+    padding: 7px;
 }
 .btn{
     cursor: pointer;
     display: inline-block;
     border: 0;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 20px 20px;
     background:#262626;
     color:#ffffff;
     font-size: 15px;
     border:1px solid #ffffff;
+    border-radius: 75%;
     margin:10px 0;
 }
+.btn:hover{
+    opacity:.8 ;
+}
+/* news cards */
+.news-cards{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 25px;
+    margin: 10px 0;
+}
+.news-cards img{
+width: 100%;
+height: 180px;
+}
+.news-cards h3{
+    font-size: 20px;
+    margin: 10px 0;
+}
+.news-cards a{
+    padding: 10px 0;
+    color:#f2f2f2;
+    text-transform: uppercase;
+    display: inline-block;
+    font-weight: bold;
+}
+.news-cards a:hover{
+    text-decoration: underline;
+}
 
+/* cards banner one */
+.cards-banner-one{
+    width: 100%;
+    height: 350px;
+    background: url('../img/tech.jpg') center/cover;
+    margin-bottom: 40px;
+}
+.cards-banner-one .content{
+    width: 40%;
+    padding:90px 0 0 30px ;
+}
+/* .cards-banner-two */
+.cards-banner-two{
+    height: 350px;
+    background: url(../img/tech3.jpg) center/cover;
+}
+.cards-banner-two .content{
+    width: 50%;
+    padding:90px 0 0 30px ;
+}
+.cards-banner-two p,
+.cards-banner-two h2{
+    margin: 10px 0 20px 0;
+}
+/* social */
+.social{
+    margin: 50px;
+}
+.social p{
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 15px;
+}
+.links{
+    display: flex;
+    align-items:center;
+    justify-content: center;
+
+}
+.links a{
+    margin:0 30px ;
+}
+.links a i{
+  font-size: 3rem; 
+}
