--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 body{
     background: black;
     color: white;
-    background-color: #121113;
+    background-color: #111011;
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23a13e6a' fill-opacity='0.4'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 font-family: 'Oswald', sans-serif; ;
 }
@@ -33,7 +33,7 @@ ul{
 .nav-brand{
     width: 70px;
     border-radius: 50%;
-    margin-top: 10px;
+    margin-top: 15px;
 }
 .nav-main ul{
     display: flex;
@@ -50,7 +50,15 @@ padding: 2px;
 }
 .nav-main ul.nav-menu{
     flex: 1;
-    margin-left: 20px;
+    margin-left: 25px;
+}
+.menu-btn{
+    position:absolute;
+    cursor: pointer;
+    top: 15px;
+    right: 10px;
+    z-index: 2;
+    display: none;
 }
 /* showcase*/
 hr{
@@ -59,9 +67,9 @@ hr{
 .showcase{
     width: 100%;
     height:550px;
-    background: url('../img/showcase2.jpg') no-repeat center/cover;
-    padding-bottom: 50px;
-    margin-bottom:20px ;
+    background: url('../img/principal.jpg') no-repeat center/cover;
+    padding: 40px;
+    margin-bottom:10px ;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -69,11 +77,12 @@ hr{
 }
 .showcase  h2{
     padding: 5px;
-    background:#262626;
+
+    font-weight: bold;
 }
 .showcase  p{
-    background-color: #262626;
     padding: 7px;
+    font-weight: bold;
 }
 .btn{
     cursor: pointer;
@@ -81,11 +90,8 @@ hr{
     border: 0;
     font-weight: bold;
     padding: 20px 20px;
-    background:#262626;
-    color:#ffffff;
     font-size: 15px;
     border:1px solid #ffffff;
-    border-radius: 75%;
     margin:10px 0;
 }
 .btn:hover{
@@ -190,4 +196,60 @@ height: 180px;
     padding: 20px 0;
     text-align: center;
     padding-bottom: 20px;
+}
+/* responsive */
+@media(max-width:700px){
+    .menu-btn{
+        display: block;
+        
+    }
+    .nav-main ul.nav-menu{
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #2f3640;
+        height:100%;
+        padding: 30px;
+        opacity: 0.9;
+        transform: translatex(-400px);
+        transition:transform .5s ease-in-out ;
+    }
+    .nav-main ul.nav-menu.show{
+        transform: translatex(-20px);
+    }
+    .nav-main ul.nav-menu li{
+       padding: 20px;
+       font-size: 14px; 
+    }
+
+    .nav-main ul.nav-menu-right{
+        margin-right: 50px;
+    }
+    .news-cards{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .cards-banner-one .content,
+    .cards-banner-two .content{
+        width: 80%;
+    }
+    .footer-links .footer-container{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media(max-width:500px){
+    .news-cards{
+        grid-template-columns: 1fr;
+    }
+    .news-cards img{
+        height: 270px;
+    }
+    .cards-banner-two content, 
+    .cards-banner-one content{
+    width: 100%;
+    padding: 60px 20px;
+    }
+    .footer-links .footer-container{
+        grid-template-columns: 1fr;
+    }
 }
